--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,74 @@ body {
     color: #676767;
 }
 
-.header-mid p{
+.header-mid p {
     color: #252525;
     font-weight: 300;
     font-size: 18px;
 }
+
 /* section 3 closed */
+.flex-box {
+    display: flex;
+}
+
+.rcp-1 img {
+    width: 600px;
+    border-radius: 10px;
+}
+
+.rcp-2 img {
+    width: 600px;
+    border-radius: 10px;
+}
+
+.rcp-1 h1 {
+    font-size: 28px;
+    font-weight: 900;
+    color: #18191F;
+}
+
+.rcp-2 h1 {
+    font-size: 28px;
+    font-weight: 900;
+    color: #18191F;
+}
+
+.rcp-1 p {
+    color: #18191F;
+    font-size: 18px;
+
+}
+
+.rcp-2 p {
+    color: #18191F;
+    font-size: 18px;
+
+}
+
+.rcp-1 {
+    width: 50%;
+    padding: 60px;
+}
+
+.rcp-2 {
+    width: 50%;
+    margin-left: 85px;
+    padding: 60px;
+}
+
+.bx-sdw {
+    box-shadow: 0px 7px 25px #0f0f0f;
+    border-radius: 10px;
+    border-left: 8px solid orange;
+}
+
+.bx-sdw-2 {
+    box-shadow: 0px 7px 25px #0f0f0f;
+    border-radius: 10px;
+    border-left: 8px solid olivedrab;
+}
+
+#bottom {
+    margin-bottom: 100px;
+}
